# imperium

./: .mcp.json  Cargo.toml  README.md
crates/imperium/: Cargo.toml
crates/imperium-mcp/: Cargo.toml
crates/imperium-mcp/src/: main.rs
crates/imperium/src/: main.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: lib.rs
crates/sim_core/tests/: invariants.rs
docs/: build-environment.md
docs/proposals/: per-group-enemy-ai.md
scripts/: vendor-deps.sh
