[package]
name = "imperium-mcp"
version = "0.1.0"
edition = "2021"

# MCP server (stdio) that proxies tools to the running game's Bevy Remote
# Protocol endpoint (:15702). Lets an MCP client (Claude Code, etc.) inspect
# and drive the live battle.
[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
